--- a/.gitignore
+++ b/.gitignore
@@ -13,14 +13,16 @@ node_modules/
 /frontend/build
 
 # misc
-.DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .DS_Store
+# .env
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .vscode/settings.json
+node_modules
+
